setTimeout to fix issue where react-stack-gird items overlap until refresh

--- a/client/src/components/News/News.css
+++ b/client/src/components/News/News.css
@@ -1,3 +1,63 @@
 .news-page {
-    padding: 25px;
+    padding: 25px !important;
+    overflow-y: scroll !important;
+    overflow-x: hidden !important;
+    scroll-behavior: smooth !important;
+}
+
+.news-container {
+    width: 100% !important;
+    max-width: 1800px !important;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.news-page::-webkit-scrollbar {
+    width: 0.6em;
+}
+   
+.news-page::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+}
+   
+.news-page::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 5px;
+}
+
+.news-card {
+    background-color: #1D2437 !important;
+    border: none !important;
+    margin: 5px !important;
+    width: 290px !important;
+    min-height: 200px;
+}
+
+.news-card:hover {
+    background-color: #1f2944 !important;
+    transition: 0.2s !important;
+    border-radius: 5px !important;
+}
+
+.news-image-container {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.provider-container {
+    width: 100% !important;
+    display: flex !important;
+    align-items: baseline;
+    justify-content: space-between;
+    font-size: 0.75rem;
+}
+
+.provider-name {
+    margin-left: 10px;
+}
+
+.news-title {
+    font-weight: 700 !important;
 }
